--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "day1:part1": "deno run -A --watch day1/part1.ts",
+    "day1:part2": "deno run -A --watch day1/part2.ts"
   }
 }
