--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "day1:part1": "deno run -A --watch day1/part1.ts",
-    "day1:part2": "deno run -A --watch day1/part2.ts"
+    "day1:part2": "deno run -A --watch day1/part2.ts",
+    "day2:part1": "deno run -A --watch day2/part1.ts"
   }
 }
