--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "day1:part1": "deno run -A --watch day1/part1.ts",
     "day1:part2": "deno run -A --watch day1/part2.ts",
     "day2:part1": "deno run -A --watch day2/part1.ts",
-    "day2:part2": "deno run -A --watch day2/part2.ts"
+    "day2:part2": "deno run -A --watch day2/part2.ts",
+    "day3:part1": "deno run -A --watch day3/part1.ts"
   }
 }
