--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,8 @@
     "day4:part1": "deno run -A --watch day4/part1.ts",
     "day4:part2": "deno run -A --watch day4/part2.ts",
     "day5:part1": "deno run -A --watch day5/part1.ts",
-    "day5:part2": "deno run -A --watch day5/part2.ts"
+    "day5:part2": "deno run -A --watch day5/part2.ts",
+    "day6:part1": "deno run -A --watch day6/part1.ts",
+    "day6:part2": "deno run -A --watch day6/part2.ts"
   }
 }
