--- a/deno.json
+++ b/deno.json
@@ -11,6 +11,8 @@
     "day5:part1": "deno run -A --watch day5/part1.ts",
     "day5:part2": "deno run -A --watch day5/part2.ts",
     "day6:part1": "deno run -A --watch day6/part1.ts",
-    "day6:part2": "deno run -A --watch day6/part2.ts"
+    "day6:part2": "deno run -A --watch day6/part2.ts",
+    "day7:part1": "deno run -A --watch day7/part1.ts",
+    "day7:part2": "deno run -A --watch day7/part2.ts"
   }
 }
