--- a/deno.json
+++ b/deno.json
@@ -15,6 +15,8 @@
     "day7:part1": "deno run -A --watch day7/part1.ts",
     "day7:part2": "deno run -A --watch day7/part2.ts",
     "day8:part1": "deno run -A --watch day8/part1.ts",
-    "day8:part2": "deno run -A --watch day8/part2.ts"
+    "day8:part2": "deno run -A --watch day8/part2.ts",
+    "day9:part1": "deno run -A --watch day9/part1.ts",
+    "day9:part2": "deno run -A --watch day9/part2.ts"
   }
 }
