make template file

--- a/deno.json
+++ b/deno.json
@@ -17,6 +17,38 @@
     "day8:part1": "deno run -A --watch day8/part1.ts",
     "day8:part2": "deno run -A --watch day8/part2.ts",
     "day9:part1": "deno run -A --watch day9/part1.ts",
-    "day9:part2": "deno run -A --watch day9/part2.ts"
+    "day9:part2": "deno run -A --watch day9/part2.ts",
+    "day10:part1": "deno run -A --watch day10/part1.ts",
+    "day10:part2": "deno run -A --watch day10/part2.ts",
+    "day11:part1": "deno run -A --watch day11/part1.ts",
+    "day11:part2": "deno run -A --watch day11/part2.ts",
+    "day12:part1": "deno run -A --watch day12/part1.ts",
+    "day12:part2": "deno run -A --watch day12/part2.ts",
+    "day13:part1": "deno run -A --watch day13/part1.ts",
+    "day13:part2": "deno run -A --watch day13/part2.ts",
+    "day14:part1": "deno run -A --watch day14/part1.ts",
+    "day14:part2": "deno run -A --watch day14/part2.ts",
+    "day15:part1": "deno run -A --watch day15/part1.ts",
+    "day15:part2": "deno run -A --watch day15/part2.ts",
+    "day16:part1": "deno run -A --watch day16/part1.ts",
+    "day16:part2": "deno run -A --watch day16/part2.ts",
+    "day17:part1": "deno run -A --watch day17/part1.ts",
+    "day17:part2": "deno run -A --watch day17/part2.ts",
+    "day18:part1": "deno run -A --watch day18/part1.ts",
+    "day18:part2": "deno run -A --watch day18/part2.ts",
+    "day19:part1": "deno run -A --watch day19/part1.ts",
+    "day19:part2": "deno run -A --watch day19/part2.ts",
+    "day20:part1": "deno run -A --watch day20/part1.ts",
+    "day20:part2": "deno run -A --watch day20/part2.ts",
+    "day21:part1": "deno run -A --watch day21/part1.ts",
+    "day21:part2": "deno run -A --watch day21/part2.ts",
+    "day22:part1": "deno run -A --watch day22/part1.ts",
+    "day22:part2": "deno run -A --watch day22/part2.ts",
+    "day23:part1": "deno run -A --watch day23/part1.ts",
+    "day23:part2": "deno run -A --watch day23/part2.ts",
+    "day24:part1": "deno run -A --watch day24/part1.ts",
+    "day24:part2": "deno run -A --watch day24/part2.ts",
+    "day25:part1": "deno run -A --watch day25/part1.ts",
+    "day25:part2": "deno run -A --watch day25/part2.ts"
   }
 }
